--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,56 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: none;
+    width: 100%;
+}
+
+.todo-app {
+    width: 30%;
+    margin: 2rem auto;
+    box-shadow: -1px 1px 6px 0px #878586;
+}
+
+.todo-app i {
+    color: #7c7c7c;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid rgba(69, 69, 70, 0.5);
+    padding: .75rem;
+}
+
+.header > h1 {
+    font-size: 1rem;
+    color: #7c7c7c;
+}
+
+.todo-input-wrapper {
+    display: flex;  
+    align-items: center;
+    border-bottom: 1px solid rgba(69, 69, 70, 0.5);
+    padding: .75rem;
+}
+
+.todo-input-wrapper input {
+    padding: .1rem;
+    border: none;
+    outline: none;
+    width: 80%;
+    font-style: italic;
+}
+
+.clear-all-btn {
+    width: 100%;
+    background-color: #e3e3e3;
+    padding: .75rem;
+    border: none;
+    color: #7c7c7c;
 }
